# okros

./: .env.example  .gitignore  AGENTS.md  AGENT_GUIDE.md  AUTOMATION.md  CLAUDE.md  CODE_MAP.md  COVERAGE_REPORT.md  Cargo.toml  DDD.md  DEVELOPMENT.md  DISPLAY_BUG_POSTMORTEM.md  FUTURE_WORK.md  HEADLESS_OFFLINE_INTEGRATION.md  IMPLEMENTATION_PLAN.md  LOC_COMPARISON.md  MCL_CODE_MAP.md  MUD_LEARNINGS.md  Makefile  OFFLINE_MUD_TEST_REPORT.md  ORIENTATION.md  PLAYBOOK.md  PORTING_HISTORY.md  PORT_GAPS.md  PORT_GAPS_2.md  PORT_LEARNINGS.md  README.md  TESTING.md  TOY_DEV.md  TOY_PLAN.md  TOY_PLAN_2.md  build.rs  git-init.sh  justfile  rustfmt.toml  test-with-tty.sh  test_headless_offline.sh  test_offline_tty.sh
.cargo/: config.toml
docs/: faketty-blog.md  virtual-dispatch-blog.md
scripts/: README.md  capture_nodeka.pl  compare_loc.pl  generate-coverage-report.sh  generate_loc_report.pl  get_buffer.sh  install-git-hooks.sh  list_sessions.sh  mud_cmd.sh  pre-commit-coverage  pre-push-coverage  recent_lines.sh  session_status.sh  start_headless.sh  stop_headless.sh  test_mud_login.sh  test_nodeka_tty.sh  update-loc-comparison.sh  watch_output.sh
src/: CODE_MAP.md  action.rs  alias.rs  ansi.rs  color.rs  command_queue.rs  config.rs  control.rs  curses.rs  debug_log.rs  engine.rs  globals.rs  history.rs  input.rs  input_box.rs  input_line.rs  lib.rs  macro_def.rs  main.rs  mccp.rs  mud.rs  mud_selection.rs  output_window.rs  screen.rs  screen2.rs  (+12 more)
toys/toy2_ncurses/: Cargo.toml  LEARNINGS.md  README.md
toys/toy2_ncurses/src/: complete_test.rs  ncurses_test.rs  pancurses_test.rs
(+89 files in other folders)
