[package]
name = "okros"
version = "0.1.0"
edition = "2021"
description = "Rust MUD client reviving MCL design for headless operation and LLM agents"
license = "GPL-2.0"

[features]
default = []
# Enabling `python` pulls in the optional `pyo3` dependency
python = ["pyo3"]
perl = []
mccp = ["flate2"]

[dependencies]
libc = "0.2"
ncurses = "5.101"
bitflags = "2.4"
flate2 = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

[dependencies.pyo3]
version = "0.22"
optional = true
features = ["auto-initialize"]

[dev-dependencies]
tempfile = "3.8"
